# ckb-cobuild-poc

./: Cargo.toml  README.md
ckb-transaction-cobuild/: Cargo.toml
ckb-transaction-cobuild/src/: blake2b.rs  error.rs  lazy_reader.rs  lib.rs  otx.rs  sighashall.rs  utils.rs
ckb-transaction-cobuild/src/schemas/: basic.rs
ckb-transaction-cobuild/src/schemas2/: basic.rs  blockchain.rs  top_level.rs
contracts/transaction-cobuild-lock-demo/: Cargo.toml  README.md
contracts/transaction-cobuild-lock-demo/src/: auth.rs  entry.rs  error.rs  main.rs
contracts/transaction-cobuild-otx-lock-demo/: Cargo.toml  README.md
contracts/transaction-cobuild-otx-lock-demo/src/: auth.rs  entry.rs  error.rs  main.rs
contracts/transaction-cobuild-type-demo/: Cargo.toml  README.md
contracts/transaction-cobuild-type-demo/src/: entry.rs  main.rs
contracts/transaction-cobuild-type-otx-demo/: Cargo.toml  README.md
schemas/: basic.mol
tests/: Cargo.toml
tests/src/: lib.rs  tests.rs  tx.rs
