[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-transaction-cobuild = { path = "../ckb-transaction-cobuild" }
ckb-testtool = "0.10"
ckb-auth-rs = { git = "https://github.com/xcshuan/ckb-auth.git", rev = "97b1be3" }
rand = "0.6.5"
molecule = { version = "0.7.5", default-features = false }
serde_json = "1.0"
