[package]
name = "transaction-cobuild-otx-lock-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-std = "0.15.1"
molecule = { version = "0.7.5", default-features = false }
ckb-hash = { version = "0.112.1", default-features = false, features = [
    "ckb-contract",
] }
secp256k1 = { version = "0.29.0", default-features = false, features = [
    "alloc",
    "lowmemory",
    "recovery",
] }
ckb-transaction-cobuild = { path = "../../ckb-transaction-cobuild" }